--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "start": "craco start",
     "build": "craco build",
     "test": "craco test",
+    "fix": "eslint src/* --fix",
     "eject": "react-scripts eject",
     "prettier": "prettier --write .",
     "prepare": "husky install"
