--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^7.0.0",
+    "@reduxjs/toolkit": "^1.9.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -11,10 +12,22 @@
     "@types/node": "^16.18.6",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "@types/styled-components": "^5.1.26",
+    "antd": "^5.0.4",
+    "axios": "^1.2.1",
+    "classnames": "^2.3.2",
     "eslint": "^8.29.0",
     "react": "^18.2.0",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.4.4",
     "react-scripts": "5.0.1",
+    "react-transition-group": "^4.4.5",
+    "react-unity-webgl": "^9.3.0",
+    "redux-toolkit": "^1.1.2",
+    "screenfull": "^6.0.2",
+    "styled-components": "^5.3.6",
     "typescript": "*",
     "web-vitals": "^2.1.4"
   },
@@ -46,11 +59,14 @@
     ]
   },
   "devDependencies": {
+    "@types/react-custom-scrollbars": "^4.0.10",
+    "@types/react-transition-group": "^4.4.5",
+    "@types/webpack-env": "^1.18.0",
     "@typescript-eslint/eslint-plugin": "^5.45.1",
     "@typescript-eslint/parser": "^5.45.1",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "prettier": "^2.8.0",
-    "husky": "^8.0.0"
+    "husky": "^8.0.0",
+    "prettier": "^2.8.0"
   }
 }
