--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.2.1",
     "classnames": "^2.3.2",
     "eslint": "^8.29.0",
+    "nprogress": "^0.2.0",
     "react": "^18.2.0",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^18.2.0",
@@ -59,6 +60,7 @@
     ]
   },
   "devDependencies": {
+    "@types/nprogress": "^0.2.0",
     "@types/react-custom-scrollbars": "^4.0.10",
     "@types/react-transition-group": "^4.4.5",
     "@types/webpack-env": "^1.18.0",
